# ww

./: .gitattributes  .gitignore  Cargo.toml  Makefile.toml
assets/: cube.gltf
blender/: cube.blend
src/: main.rs  orientation.rs
static/: index.html
