[package]
name = "ww"
version = "0.1.0"
edition = "2018"

[features]
dev = [
    "bevy/bevy_wgpu",
    "bevy/dynamic",
]
native = [
    "bevy/bevy_wgpu",
]
web = [
    "bevy_webgl2",
]

[dependencies]
bevy = { version = "0.5.0", default-features = false, features = ["bevy_winit", "render"] }
bevy_webgl2 = { version = "0.5.2", optional = true }

[profile.dev.package."*"]
opt-level = 3
